<resources>
    <string name="app_name">MemoryMaster</string>
    <string name="memory_usage">Memory Usage</string>
    <string name="memory_usage_format">%d%%</string>
    <string name="memory_leaks">Potential Memory Leaks</string>
    <string name="predicted_allocations">Predicted Memory Allocations</string>
    <string name="optimize_memory">Optimize Memory</string>
    <string name="channel_name">Memory Master Service</string>
    <string name="recently_used_apps">Recently Used Apps</string>
    <string name="channel_description">Continuous memory monitoring and optimization</string>
    <string name="background_service_notification">MemoryMaster is optimizing your device\'s memory</string>
</resources>
